tmux: update colorscheme

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -51,4 +51,36 @@ set -g @plugin 'alexwforsythe/tmux-which-key'
 run '~/.tmux/plugins/tpm/tpm'
 
 
+# Everforest color palette
+set -g @everforest_bg_dim '#1e2326'
+set -g @everforest_bg0 '#272e33'
+set -g @everforest_bg1 '#2e383c'
+set -g @everforest_bg2 '#374145'
+set -g @everforest_bg3 '#414b50'
+set -g @everforest_bg4 '#495156'
+set -g @everforest_bg5 '#4f5b58'
+set -g @everforest_fg '#d3c6aa'
+set -g @everforest_red '#e67e80'
+set -g @everforest_orange '#e69875'
+set -g @everforest_yellow '#dbbc7f'
+set -g @everforest_green '#a7c080'
+set -g @everforest_blue '#7fbbb3'
+set -g @everforest_aqua '#83c092'
+set -g @everforest_purple '#d699b6'
 
+# Status bar colors
+set -g status-style bg='#2e383c',fg='#d3c6aa'
+set -g status-left-style bg='#2e383c',fg='#a7c080'
+set -g status-right-style bg='#2e383c',fg='#7fbbb3'
+
+# Window status colors
+setw -g window-status-current-style bg='#a7c080',fg='#272e33'
+setw -g window-status-style bg='#374145',fg='#d3c6aa'
+
+# Pane border colors
+set -g pane-border-style fg='#374145'
+set -g pane-active-border-style fg='#a7c080'
+
+# Message colors
+set -g message-style bg='#dbbc7f',fg='#272e33'
+set -g message-command-style bg='#dbbc7f',fg='#272e33'
