tmux: update config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -31,15 +31,9 @@ bind C-n display-popup -E 'bash -i -c "read -p \"Session name: \" name; tmux new
 # Display menu
 bind d display-menu -T "#[align=centre]Dotfiles" -x C -y C \
 "zshrc" z "display-popup -E 'nvim ~/.zshrc'" \
-"tmux.conf" t "display-popup -E 'nvim ~/.tmux.conf'" \
+"tmux.conf" t "display-popup -E 'nvim ~/.config/tmux/'" \
 "nvim" n "display-popup -E 'nvim ~/.config/nvim/'" \
-"Exit" q ""
-
-bind k display-menu -T "#[align=centre]Projects" -x C -y C \
-"Coliving" 1 "display-popup -E 'nvim ~/s/r/Coliving_Nextjs/'" \
-"Joivy Business" 2 "display-popup -E 'nvim ~/s/r/Joivy_website/'" \
-"JDS" 3 "display-popup -E 'nvim ~/s/r/Joivy_Design_System/'" \
-"Campus" 4 "display-popup -E 'nvim ~/s/r/DV_Campus/'" \
+"ghostty" z "display-popup -E 'nvim ~/.config/ghostty/'" \
 "Exit" q ""
 
 # List of plugins
