tmux: update config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,6 +9,21 @@ unbind %
 bind h split-window -h
 bind v split-window -v
 
+# New window in current path
+bind c new-window -c "#{pane_current_path}"
+
+# Vi-mode navigation for panes
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# Resize panes with vi keys
+bind -r K resize-pane -U 5
+bind -r J resize-pane -D 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
 # Start vindows and panes at 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -22,24 +37,33 @@ set -g status-position top
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# Copy mode improvements
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Quick reload config
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!"
+
 # Display popups
 bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind C-g display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "lazygit"
-bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#$')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind C-n display-popup -E 'bash -i -c "read -p \"Session name: \" name; tmux new-session -d -s $name && tmux switch-client -t \$name"'
 
 # Display menu
-bind d display-menu -T "#[align=centre]Dotfiles" -x C -y C \
+bind D display-menu -T "#[align=centre]Dotfiles" -x C -y C \
 "zshrc" z "display-popup -E 'nvim ~/.zshrc'" \
 "tmux.conf" t "display-popup -E 'nvim ~/.config/tmux/'" \
 "nvim" n "display-popup -E 'nvim ~/.config/nvim/'" \
-"ghostty" z "display-popup -E 'nvim ~/.config/ghostty/'" \
+"ghostty" g "display-popup -E 'nvim ~/.config/ghostty/'" \
 "Exit" q ""
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -67,6 +91,12 @@ set -g status-style bg='#2e383c',fg='#d3c6aa'
 set -g status-left-style bg='#2e383c',fg='#a7c080'
 set -g status-right-style bg='#2e383c',fg='#7fbbb3'
 
+# Better status bar content
+set -g status-left "#[bg=#{@ef_green},fg=#{@ef_bg0},bold] #S #[bg=#{@ef_bg1},fg=#{@ef_green}]"
+set -g status-right "#[fg=#{@ef_blue}]#[bg=#{@ef_blue},fg=#{@ef_bg0},bold] %H:%M #[bg=#{@ef_green},fg=#{@ef_bg0},bold] %d-%b "
+set -g status-left-length 20
+set -g status-right-length 40
+
 # Window status colors
 setw -g window-status-current-style bg='#a7c080',fg='#272e33'
 setw -g window-status-style bg='#374145',fg='#d3c6aa'
@@ -78,3 +108,4 @@ set -g pane-active-border-style fg='#a7c080'
 # Message colors
 set -g message-style bg='#dbbc7f',fg='#272e33'
 set -g message-command-style bg='#dbbc7f',fg='#272e33'
+
