feat: tmux update split window horizontal

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,7 +6,7 @@ bind-key C-\; send-prefix
 # split panes using h and v
 unbind '"'
 unbind %
-bind h split-window -h
+bind w split-window -h
 bind v split-window -v
 
 # New window in current path
