--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -63,7 +63,8 @@ bind D display-menu -T "#[align=centre]Dotfiles" -x C -y C \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'alexwforsythe/tmux-which-key'
-set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'sainnhe/tmux-fzf' # F
+set -g @plugin '27medkamal/tmux-session-wizard' # T
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
