tmux: update tpm run path

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -67,7 +67,7 @@ set -g @plugin 'sainnhe/tmux-fzf' # F
 set -g @plugin '27medkamal/tmux-session-wizard' # T
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 
 # Everforest color palette
