tmux theme update

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -32,7 +32,7 @@ set-option -g renumber-windows on
 set -g detach-on-destroy off
 
 # Status bar on top
-set -g status-position top
+set -g status-position bottom
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -70,43 +70,18 @@ set -g @plugin '27medkamal/tmux-session-wizard' # T
 run '~/.config/tmux/plugins/tpm/tpm'
 
 
-# Everforest color palette
-set -g @everforest_bg_dim '#1e2326'
-set -g @everforest_bg0 '#272e33'
-set -g @everforest_bg1 '#2e383c'
-set -g @everforest_bg2 '#374145'
-set -g @everforest_bg3 '#414b50'
-set -g @everforest_bg4 '#495156'
-set -g @everforest_bg5 '#4f5b58'
-set -g @everforest_fg '#d3c6aa'
-set -g @everforest_red '#e67e80'
-set -g @everforest_orange '#e69875'
-set -g @everforest_yellow '#dbbc7f'
-set -g @everforest_green '#a7c080'
-set -g @everforest_blue '#7fbbb3'
-set -g @everforest_aqua '#83c092'
-set -g @everforest_purple '#d699b6'
+set -g message-style "bg=#1c1c1c,fg=#9c9c9c"
+set -g pane-active-border-style "bg=#080808,fg=#80a0ff"
+set -g pane-border-style "bg=#080808,fg=#303030"
+set -g status-style "bg=#1c1c1c,fg=#9c9c9c"
+setw -g window-status-activity-style none
+setw -g window-status-current-style "bg=#353946,fg=#80a0ff"
+# Set active and inactive window style.
+setw -g window-status-current-format " #[fg=default][#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
+setw -g window-status-format " [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
 
-# Status bar colors
-set -g status-style bg='#2e383c',fg='#d3c6aa'
-set -g status-left-style bg='#2e383c',fg='#a7c080'
-set -g status-right-style bg='#2e383c',fg='#7fbbb3'
-
-# Better status bar content
-set -g status-left "#[bg=#{@ef_green},fg=#{@ef_bg0},bold] #S #[bg=#{@ef_bg1},fg=#{@ef_green}]"
-set -g status-right "#[fg=#{@ef_blue}]#[bg=#{@ef_blue},fg=#{@ef_bg0},bold] %H:%M #[bg=#{@ef_green},fg=#{@ef_bg0},bold] %d-%b "
-set -g status-left-length 20
-set -g status-right-length 40
-
-# Window status colors
-setw -g window-status-current-style bg='#a7c080',fg='#272e33'
-setw -g window-status-style bg='#374145',fg='#d3c6aa'
-
-# Pane border colors
-set -g pane-border-style fg='#374145'
-set -g pane-active-border-style fg='#a7c080'
-
-# Message colors
-set -g message-style bg='#dbbc7f',fg='#272e33'
-set -g message-command-style bg='#dbbc7f',fg='#272e33'
-
+# Set status bar components and style.
+set -g status-left "#[fg=#f09479] "
+if-shell '[[ $(uname) = Darwin ]]' \
+    'set -g status-right " %a %d %b #[fg=#80a0ff]  %I:%M%p"' \
+    'set -g status-right " %a %d %b #[fg=#80a0ff]  %I:%M%P"'
