--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -48,8 +48,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!
 
 # Display popups
 bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
-bind C-g display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "lazygit"
-bind C-n display-popup -E 'bash -i -c "read -p \"Session name: \" name; tmux new-session -d -s $name && tmux switch-client -t \$name"'
+bind C-n display-popup -E 'bash -i -c "read -p \"Create new session: \" name; tmux new-session -d -s $name && tmux switch-client -t \$name"'
 
 # Display menu
 bind D display-menu -T "#[align=centre]Dotfiles" -x C -y C \
@@ -64,7 +63,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'sainnhe/tmux-fzf' # F
-set -g @plugin '27medkamal/tmux-session-wizard' # T
+set -g @plugin 'junegunn/tmux-fzf-maccy' # @
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
