tmux update colors

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -69,18 +69,18 @@ set -g @plugin 'junegunn/tmux-fzf-maccy' # @
 run '~/.config/tmux/plugins/tpm/tpm'
 
 
-set -g message-style "bg=#1c1c1c,fg=#9c9c9c"
+set -g message-style "bg=#000000,fg=#9c9c9c"
 set -g pane-active-border-style "bg=#080808,fg=#80a0ff"
 set -g pane-border-style "bg=#080808,fg=#303030"
-set -g status-style "bg=#1c1c1c,fg=#9c9c9c"
+set -g status-style "bg=#000000,fg=#9c9c9c"
 setw -g window-status-activity-style none
 setw -g window-status-current-style "bg=#353946,fg=#80a0ff"
 # Set active and inactive window style.
-setw -g window-status-current-format " #[fg=default][#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
-setw -g window-status-format " [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
+setw -g window-status-current-format "#[bg=#000000] [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
+setw -g window-status-format "#[bg=#000000] [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
 
 # Set status bar components and style.
-set -g status-left "#[fg=#f09479] "
+set -g status-left "#[fg=#f09479,bg=#000000]  #S"
 if-shell '[[ $(uname) = Darwin ]]' \
-    'set -g status-right " %a %d %b #[fg=#80a0ff]  %I:%M%p"' \
-    'set -g status-right " %a %d %b #[fg=#80a0ff]  %I:%M%P"'
+    'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%p"' \
+    'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%P"'
