nvim + tmux: image plugin

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -65,6 +65,15 @@ set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'sainnhe/tmux-fzf' # F
 set -g @plugin 'junegunn/tmux-fzf-maccy' # @
 
+
+
+# https://github.com/3rd/image.nvim/?tab=readme-ov-file#tmux
+# This is needed by the image.nvim plugin
+set -gq allow-passthrough on
+# This is related to the `tmux_show_only_in_active_window = true,` config in
+# image.nvim
+set -g visual-activity off
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
 
@@ -84,3 +93,7 @@ set -g status-left "#[fg=#f09479,bg=#000000]  #S"
 if-shell '[[ $(uname) = Darwin ]]' \
     'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%p"' \
     'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%P"'
+
+
+
+
