--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -32,7 +32,8 @@ set-option -g renumber-windows on
 set -g detach-on-destroy off
 
 # Status bar on top
-set -g status-position bottom
+set -g status-position top
+set -g status-justify left
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -46,24 +47,11 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Quick reload config
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!"
 
-# Display popups
-bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
-bind C-n display-popup -E 'bash -i -c "read -p \"Create new session: \" name; tmux new-session -d -s $name && tmux switch-client -t \$name"'
-
-# Display menu
-bind D display-menu -T "#[align=centre]Dotfiles" -x C -y C \
-"zshrc" z "display-popup -E 'nvim ~/.zshrc'" \
-"tmux.conf" t "display-popup -E 'nvim ~/.config/tmux/'" \
-"nvim" n "display-popup -E 'nvim ~/.config/nvim/'" \
-"ghostty" g "display-popup -E 'nvim ~/.config/ghostty/'" \
-"Exit" q ""
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'sainnhe/tmux-fzf' # F
-set -g @plugin 'junegunn/tmux-fzf-maccy' # @
 
 
 
@@ -74,26 +62,14 @@ set -gq allow-passthrough on
 # image.nvim
 set -g visual-activity off
 
+
+set -g status-bg #000000
+setw -g window-status-current-format "[#I]#W #{?window_flags,#{window_flags}, } "
+setw -g window-status-format "[#I]#W #{?window_flags,#{window_flags}, } "
+
+set -g status-right '#(gitmux -cfg $HOME/.gitmux.conf "#pane_current_path") #{prefix_highlight} %Y-%m-%d | %H:%M'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
-
-
-set -g message-style "bg=#000000,fg=#9c9c9c"
-set -g pane-active-border-style "bg=#080808,fg=#80a0ff"
-set -g pane-border-style "bg=#080808,fg=#303030"
-set -g status-style "bg=#000000,fg=#9c9c9c"
-setw -g window-status-activity-style none
-setw -g window-status-current-style "bg=#353946,fg=#80a0ff"
-# Set active and inactive window style.
-setw -g window-status-current-format "#[bg=#000000] [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
-setw -g window-status-format "#[bg=#000000] [#I]#W #[fg=#e65e72]#{?window_flags,#{window_flags}, }#[fg=default] "
-
-# Set status bar components and style.
-set -g status-left "#[fg=#f09479,bg=#000000]  #S"
-if-shell '[[ $(uname) = Darwin ]]' \
-    'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%p"' \
-    'set -g status-right "#[bg=#000000] %a %d %b #[fg=#80a0ff,bg=#000000]  %I:%M%P"'
-
-
 
 
