update tmux config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,13 +1,16 @@
 # remap prefix from 'C-b' to 'C-;'
 unbind C-b
-set-option -g prefix C-\;
-bind-key C-\; send-prefix
+unbind C-Space
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
-# split panes using h and v
+# split panes using w and v
 unbind '"'
 unbind %
 bind w split-window -h
 bind v split-window -v
+
+bind Space last-window
 
 # New window in current path
 bind c new-window -c "#{pane_current_path}"
@@ -18,17 +21,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# Resize panes with vi keys
-bind -r K resize-pane -U 5
-bind -r J resize-pane -D 5
-bind -r H resize-pane -L 5
-bind -r L resize-pane -R 5
-
-# Start vindows and panes at 1 instead of 0
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+set -g renumber-windows on
 set -g detach-on-destroy off
 
 # Status bar on top
@@ -45,15 +38,12 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Quick reload config
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded"
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'sainnhe/tmux-fzf' # F
-
-
 
 # https://github.com/3rd/image.nvim/?tab=readme-ov-file#tmux
 # This is needed by the image.nvim plugin
@@ -63,11 +53,16 @@ set -gq allow-passthrough on
 set -g visual-activity off
 
 
-set -g status-bg #000000
-setw -g window-status-current-format "[#I]#W #{?window_flags,#{window_flags}, } "
-setw -g window-status-format "[#I]#W #{?window_flags,#{window_flags}, } "
+set -g status-bg '#000000'
+set -g status-fg '#444444'
+setw -g window-status-current-style fg=#80a0ff
+setw -g window-status-current-format "[#I]#W"
+setw -g window-status-format "[#I]#W"
 
-set -g status-right '#(gitmux -cfg $HOME/.gitmux.conf "#pane_current_path") #{prefix_highlight} %Y-%m-%d | %H:%M'
+set -g status-right '#{prefix_highlight} #[fg=#80a0ff]%Y-%m-%d | %H:%M'
+
+# message style
+set message-style fg=#000000,bg=#80a0ff
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
